[project]
name = "topsis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Himanshu Sardana", email = "himanshusardana2005@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "pandas>=2.3.3",
    "pyxlsx>=1.1.3",
]

[project.scripts]
topsis = "topsis:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
